--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,13 @@
         -->
         <style>
             ul { font-size: 15px; }
+             body {
+            margin: 0;
+            height: 100vh;
+            background: linear-gradient(to bottom, #F3F8FF, #FEFFD2, #FFEEA9, #FFBF78, #FF7D29);
+        }
         </style>
+        
         {% block stylesheets %}
         {% endblock %}
         
