--- a/templates/pokemons_categorias/index.html.twig
+++ b/templates/pokemons_categorias/index.html.twig
@@ -1,20 +1,65 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PokemonsCategoriasController!{% endblock %}
+{% block title %}Ejercicio 10
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	<style>
+		.example-wrapper {
+			margin: 1em auto;
+			max-width: 800px;
+			width: 95%;
+			font: 18px / 1.5 sans-serif;
+		}
+		.example-wrapper code {
+			background: #F5F5F5;
+			padding: 2px 6px;
+		}
+	</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<div class="example-wrapper">
 
-    This friendly message is coming from:
+		<section class="container mt-4">
+			<h1>Lista Pokemon</h1>
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>ID</th>
+						<th>Nombre</th>
+						<th>Altura</th>
+						<th>Peso</th>
+						<th>Sexo</th>
+						<th>Categoria</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for pokemon in pokemons %}
+						<tr>
+							<td>{{pokemon.id}}</td>
+							<td>{{pokemon.nombre}}</td>
+							<td>{{pokemon.altura}}</td>
+							<td>{{pokemon.peso}}</td>
+							<td>
+								{% if pokemon.sexo %}Hembra
+									{%else%}Macho
+									{%endif%}</td>
+							</td>
+							<td>{{pokemon.idCategoria.categoria}}</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+
+			</table>
+	
+		</section>
+        <section class="container mt-4">
+    <h1>Lista de Categorías</h1>
     <ul>
-        <li>Your controller at <code>/var/www/html/Pokedex/src/Controller/PokemonsCategoriasController.php</code></li>
-        <li>Your template at <code>/var/www/html/Pokedex/templates/pokemons_categorias/index.html.twig</code></li>
+        {% for categoria in categorias %}
+            <li>{{ categoria.categoria }}</li>
+        {% endfor %}
     </ul>
-</div>
+</section>
+
+	</div>
 {% endblock %}
